--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
+  "repository": {
+    "url": "https://github.com/dan-silver/dashboard-core"
+  },
   "license": "ISC",
   "dependencies": {
-    "typescript": "^2.0.3"
+    "typescript": "^2.x"
   }
 }
